refactor : PR 리뷰 반영 - List<Car> -> Cars